@@ -2,6 +2,7 @@
 
 - Update lifecycle scaling to match game version 1.13
 - Reimplement probability calculations using exponential (rather than logarithmic) calcs for improved probability accuracy
+- Add option custom logfiles to log deaths, immigrant details, and/or transportation probability results.
 - Code cleanup
 - Logging tweaks
 
